--- a/index.html
+++ b/index.html
@@ -13,4 +13,8 @@
     <link rel="stylesheet" href="styles/common.css" />
   </head>
   <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
