new:  header and head commons to every page

--- a/src/pages/support.html
+++ b/src/pages/support.html
@@ -8,7 +8,9 @@
 
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <h1>Support Page</h1>
+    </main>
     <footer></footer>
   </body>
 </html>
