--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <title>locafy</title>
     <script src="/scripts/head.js"></script>
     <script src="/scripts/header.js"></script>
+    <link rel="stylesheet" href="/styles/pages/index.css">
   </head>
 
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <h1>Test</h1>
+      <h2>Le logement de vos rêves,
+        à portée de clics.</h2>
+      <p>
+        Avec locafy, trouvez le logement idéal pour vos vacances en un instant. 
+        Des biens uniques et des offres exclusives vous attendent, 
+        adaptées à tous vos besoins.
+      </p>
+      <input type=button>test</input>
+    </main>
     <footer></footer>
   </body>
 </html>
