fix text of first bien

--- a/pages/biens/1.html
+++ b/pages/biens/1.html
@@ -13,13 +13,11 @@
       <h1>Kecamatan Kuta Selatan, Indonésie</h1>
       <p>
         Bienvenue à Villa Mirabella ouverte en novembre 2023 au cœur de Bingin.
-        Un joli mélange d’une structure traditionnelle en teck, d’installations
+        <br>Un joli mélange d’une structure traditionnelle en teck, d’installations
         modernes et confortables dans un style boho chic. 4 chambres doubles
-        avec salle de bain dont une avec baignoire. Joli jardin avec au centre
+        avec salle de bain dont une avec baignoire. <br>Joli jardin avec au centre
         une grande piscine, chaises longues et fauteuils sur la terrasse
-        couverte. Un lieu idéal pour se détendre. Cuisine équipée. Wifi, draps,
-        serviettes, ménage quotidien, entretien piscine-jardin, parking sont
-        inclus.
+        couverte. Un lieu idéal pour se détendre.
       </p>
       <div id="gallerie-photos">
         <div class="photo">
