improve support page

--- a/pages/support.html
+++ b/pages/support.html
@@ -12,9 +12,8 @@
   <body>
     <header></header>
     <main>
-      <h1>Support Page</h1>
+      <h1>Support</h1>
       <div>
-        <h2>Contact</h2>
         <form action="https://api.web3forms.com/submit" method="POST">
           <input
             name="access_key"
@@ -96,7 +95,7 @@
             </div>
 
             <div>
-              <p>Comment dois-je vous recontacter ?</p>
+              <p>Un préférence pour vous recontacter ?</p>
               <input
                 aria-label="Radio si vous voulez être recontacté par email."
                 id="recontactChoixEmail"
