eddit size of support page and responsive

--- a/pages/support.html
+++ b/pages/support.html
@@ -12,7 +12,10 @@
   <body>
     <header></header>
     <main>
-      <h1>Support</h1>
+      <div>
+        <h1>Support</h1>
+        <h2>Contactez nous !</h2>
+      </div>
       <div>
         <form action="https://api.web3forms.com/submit" method="POST">
           <input
