biens css caractéristiques resize responsive

--- a/pages/biens/1.html
+++ b/pages/biens/1.html
@@ -37,7 +37,7 @@
         <div class="carac"><i class="fas fa-wifi"></i> Wifi</div>
         <div class="carac"><i class="fas fa-laptop"></i> Espace de travail dédié</div>
         <div class="carac"><i class="fas fa-parking"></i> Parking gratuit sur place</div>
-        <div class="carac"><i class="fas fa-swimming-pool"></i> Piscine extérieure privée : disponible toute l'année, ouverture 24h/24</div>
+        <div class="carac"><i class="fas fa-swimming-pool"></i> Piscine extérieure privée</div>
         <div class="carac"><i class="fas fa-snowflake"></i> Climatisation</div>
       </div>
       <div id="découvrir">
