--- a/pages/biens/1.html
+++ b/pages/biens/1.html
@@ -9,7 +9,6 @@
   <body>
     <header></header>
     <main>
-      <!-- https://www.airbnb.fr/rooms/1030159036848440745?source_impression_id=p3_1727870351_P3oqsko-SJGKucnv -->
       <h1>Kecamatan Kuta Selatan, Indonésie</h1>
       <p>
         Bienvenue à Villa Mirabella ouverte en novembre 2023 au cœur de Bingin.
@@ -40,8 +39,10 @@
         <div class="carac"><i class="fas fa-swimming-pool"></i> Piscine extérieure privée</div>
         <div class="carac"><i class="fas fa-snowflake"></i> Climatisation</div>
       </div>
+
+
       <div id="découvrir">
-        <button>Découvrir</button>
+        <a href="https://www.airbnb.fr/rooms/1030159036848440745?source_impression_id=p3_1727870351_P3oqsko-SJGKucnv" target="_blank">Découvrir</a>
       </div>
     </main>
     <footer></footer>
