--- a/pages/biens/1.html
+++ b/pages/biens/1.html
@@ -12,11 +12,11 @@
       <h1>Kecamatan Kuta Selatan, Indonésie</h1>
       <p>
         Bienvenue à Villa Mirabella ouverte en novembre 2023 au cœur de Bingin.
-        <br>Un joli mélange d’une structure traditionnelle en teck, d’installations
-        modernes et confortables dans un style boho chic. 4 chambres doubles
-        avec salle de bain dont une avec baignoire. <br>Joli jardin avec au centre
-        une grande piscine, chaises longues et fauteuils sur la terrasse
-        couverte. Un lieu idéal pour se détendre.
+        <br />Un joli mélange d’une structure traditionnelle en teck,
+        d’installations modernes et confortables dans un style boho chic. 4
+        chambres doubles avec salle de bain dont une avec baignoire. <br />Joli
+        jardin avec au centre une grande piscine, chaises longues et fauteuils
+        sur la terrasse couverte. Un lieu idéal pour se détendre.
       </p>
       <div id="gallerie-photos">
         <div class="photo">
@@ -31,18 +31,29 @@
       </div>
       <div id="caracteristiques">
         <div class="carac"><i class="fas fa-tree"></i> Vue sur le jardin</div>
-        <div class="carac"><i class="fas fa-umbrella-beach"></i> Accès partagé à la plage</div>
+        <div class="carac">
+          <i class="fas fa-umbrella-beach"></i> Accès partagé à la plage
+        </div>
         <div class="carac"><i class="fas fa-utensils"></i> Cuisine</div>
         <div class="carac"><i class="fas fa-wifi"></i> Wifi</div>
-        <div class="carac"><i class="fas fa-laptop"></i> Espace de travail dédié</div>
-        <div class="carac"><i class="fas fa-parking"></i> Parking gratuit sur place</div>
-        <div class="carac"><i class="fas fa-swimming-pool"></i> Piscine extérieure privée</div>
+        <div class="carac">
+          <i class="fas fa-laptop"></i> Espace de travail dédié
+        </div>
+        <div class="carac">
+          <i class="fas fa-parking"></i> Parking gratuit sur place
+        </div>
+        <div class="carac">
+          <i class="fas fa-swimming-pool"></i> Piscine extérieure privée
+        </div>
         <div class="carac"><i class="fas fa-snowflake"></i> Climatisation</div>
       </div>
 
-
       <div id="découvrir">
-        <a href="https://www.airbnb.fr/rooms/1030159036848440745?source_impression_id=p3_1727870351_P3oqsko-SJGKucnv" target="_blank">Découvrir</a>
+        <a
+          href="https://www.airbnb.fr/rooms/1030159036848440745?source_impression_id=p3_1727870351_P3oqsko-SJGKucnv"
+          target="_blank"
+          >Découvrir</a
+        >
       </div>
     </main>
     <footer></footer>
