--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
           />
         </div>
       </div>
+
+      <div id="vendettes">
+        <h2>
+          Nos coups de <span class="highlight-like">coeur</span> du moment</span>
+        </h2>
+        <div id="about-"></div>
+      </div>
     </main>
     <footer></footer>
   </body>
