introduce brick, reorganize code

--- a/pages/support.html
+++ b/pages/support.html
@@ -18,7 +18,11 @@
         <h3>par notre équipe !</h3>
       </div>
       <div>
-        <form action="https://api.web3forms.com/submit" method="POST">
+        <form
+          action="https://api.web3forms.com/submit"
+          method="POST"
+          class="brick"
+        >
           <input
             name="access_key"
             type="hidden"
