introduce achat widget

--- a/pages/biens/1.html
+++ b/pages/biens/1.html
@@ -48,12 +48,26 @@
         <div class="carac"><i class="fas fa-snowflake"></i> Climatisation</div>
       </div>
 
-      <div id="découvrir">
-        <a
-          href="https://www.airbnb.fr/rooms/1030159036848440745?source_impression_id=p3_1727870351_P3oqsko-SJGKucnv"
-          target="_blank"
-          >Découvrir</a
-        >
+      <div id="achat" class="brick">
+        <h2>Réserver ce bien</h2>
+        <h3>Prix par nuit: <span class="highlight-like">321 €</span></h3>
+        <form>
+          <div>
+            <label for="arrivee">Jour d'arrivée:</label>
+            <input type="date" id="arrivee" name="arrivee" required />
+          </div>
+          <div>
+            <label for="depart">Jour de départ:</label>
+            <input type="date" id="depart" name="depart" required />
+          </div>
+          <div>
+            <a
+            href="https://www.airbnb.fr/rooms/1030159036848440745?source_impression_id=p3_1727870351_P3oqsko-SJGKucnv"
+            target="_blank"
+            >Réserver</a
+          >
+          </div>
+        </form>
       </div>
     </main>
     <footer></footer>
