--- a/pages/biens/1.html
+++ b/pages/biens/1.html
@@ -18,17 +18,44 @@
         jardin avec au centre une grande piscine, chaises longues et fauteuils
         sur la terrasse couverte. Un lieu idéal pour se détendre.
       </p>
-      <div id="gallerie-photos">
-        <div class="photo">
-          <img src="/assets/biens/1/1.jpeg" alt="Image 1" />
+      <div id="landing">
+        <div id="gallerie-photos">
+          <div class="photo">
+            <img src="/assets/biens/1/1.jpeg" alt="Image 1" />
+          </div>
+          <div class="photo">
+            <img src="/assets/biens/1/2.jpeg" alt="Image 2" />
+          </div>
+          <div class="photo">
+            <img src="/assets/biens/1/3.jpeg" alt="Image 3" />
+          </div>
+          <div class="photo">
+            <img src="/assets/biens/1/4.jpeg" alt="Image 4" />
+          </div>
         </div>
-        <div class="photo">
-          <img src="/assets/biens/1/2.jpeg" alt="Image 2" />
-        </div>
-        <div class="photo">
-          <img src="/assets/biens/1/3.jpeg" alt="Image 3" />
+        <div id="achat" class="brick">
+          <h2>Réserver ce bien</h2>
+          <h3>Prix par nuit: <span class="highlight-like">321 €</span></h3>
+          <form>
+            <div>
+              <label for="arrivee">Jour d'arrivée:</label>
+              <input type="date" id="arrivee" name="arrivee" required />
+            </div>
+            <div>
+              <label for="depart">Jour de départ:</label>
+              <input type="date" id="depart" name="depart" required />
+            </div>
+            <div>
+              <a
+                href="https://www.airbnb.fr/rooms/1030159036848440745?source_impression_id=p3_1727870351_P3oqsko-SJGKucnv"
+                target="_blank"
+                >Réserver</a
+              >
+            </div>
+          </form>
         </div>
       </div>
+
       <div id="caracteristiques">
         <div class="carac"><i class="fas fa-tree"></i> Vue sur le jardin</div>
         <div class="carac">
@@ -46,28 +73,6 @@
           <i class="fas fa-swimming-pool"></i> Piscine extérieure privée
         </div>
         <div class="carac"><i class="fas fa-snowflake"></i> Climatisation</div>
-      </div>
-
-      <div id="achat" class="brick">
-        <h2>Réserver ce bien</h2>
-        <h3>Prix par nuit: <span class="highlight-like">321 €</span></h3>
-        <form>
-          <div>
-            <label for="arrivee">Jour d'arrivée:</label>
-            <input type="date" id="arrivee" name="arrivee" required />
-          </div>
-          <div>
-            <label for="depart">Jour de départ:</label>
-            <input type="date" id="depart" name="depart" required />
-          </div>
-          <div>
-            <a
-              href="https://www.airbnb.fr/rooms/1030159036848440745?source_impression_id=p3_1727870351_P3oqsko-SJGKucnv"
-              target="_blank"
-              >Réserver</a
-            >
-          </div>
-        </form>
       </div>
     </main>
     <footer></footer>
