nouvelles couleurs (h1 et prix)

--- a/pages/biens/1.html
+++ b/pages/biens/1.html
@@ -16,7 +16,7 @@
         >
       </h1>
       <h2 id="prix">
-        Prix par nuit : <br /><span class="neutral-color-4">321 €</span>
+        Prix par nuit : <br /><span class="color-5 price-size">321 €</span>
       </h2>
       <p>
         Bienvenue à la Villa Mirabella ouverte en novembre 2023 au cœur de
@@ -57,7 +57,7 @@
         <div id="achat" class="brick">
           <h2>Réserver ce bien</h2>
           <h3>
-            Prix par nuit : <br /><span class="neutral-color-4">321 €</span>
+            Prix par nuit : <br /><span class="color-5 price-size">321 €</span>
           </h3>
           <form aria-labelledby="Réserver">
             <div>
