--- a/pages/biens/2.html
+++ b/pages/biens/2.html
@@ -16,7 +16,7 @@
         >
       </h1>
       <h2 id="prix">
-        Prix par nuit : <br /><span class="neutral-color-4">111 €</span>
+        Prix par nuit : <br /><span class="color-5 price-size">111 €</span>
       </h2>
       <p>
         Découvrez cet appartement moderne et spacieux situé à Miami, à deux pas
@@ -56,7 +56,7 @@
         <div id="achat" class="brick">
           <h2>Réserver ce bien</h2>
           <h3>
-            Prix par nuit : <br /><span class="neutral-color-4">111 €</span>
+            Prix par nuit : <br /><span class="color-5 price-size">111 €</span>
           </h3>
           <form aria-labelledby="Réserver">
             <div>
