--- a/pages/biens/3.html
+++ b/pages/biens/3.html
@@ -16,7 +16,7 @@
         >
       </h1>
       <h2 id="prix">
-        Prix par nuit : <br /><span class="neutral-color-4">96 €</span>
+        Prix par nuit : <br /><span class="color-5 price-size">96 €</span>
       </h2>
       <p>
         Bienvenue au Mercury Cottage, une charmante cabane nichée dans la
@@ -57,7 +57,7 @@
         <div id="achat" class="brick">
           <h2>Réserver ce bien</h2>
           <h3>
-            Prix par nuit : <br /><span class="neutral-color-4">96 €</span>
+            Prix par nuit : <br /><span class="color-5 price-size">96 €</span>
           </h3>
           <form aria-labelledby="Réserver">
             <div>
