--- a/pages/biens/7.html
+++ b/pages/biens/7.html
@@ -16,7 +16,7 @@
         >
       </h1>
       <h2 id="prix">
-        Prix par nuit: <br /><span class="neutral-color-4">47 €</span>
+        Prix par nuit : <br /><span class="color-5 price-size">47 €</span>
       </h2>
       <p>
         Venez découvrir LA FORGE, un logement unique au cœur de Quinson, offrant
@@ -59,7 +59,7 @@
         <div id="achat" class="brick">
           <h2>Réserver ce bien</h2>
           <h3>
-            Prix par nuit: <br /><span class="neutral-color-4">47 €</span>
+            Prix par nuit : <br /><span class="color-5 price-size">47 €</span>
           </h3>
           <form aria-labelledby="Réserver">
             <div>
