--- a/pages/biens/5.html
+++ b/pages/biens/5.html
@@ -16,7 +16,7 @@
         >
       </h1>
       <h2 id="prix">
-        Prix par nuit : <br /><span class="neutral-color-4">201 €</span>
+        Prix par nuit : <br /><span class="color-5 price-size">201 €</span>
       </h2>
       <p>
         Séjournez dans ce superbe Penthouse Studio avec terrasse sur le toit
@@ -59,7 +59,7 @@
         <div id="achat" class="brick">
           <h2>Réserver ce bien</h2>
           <h3>
-            Prix par nuit : <br /><span class="neutral-color-4">201 €</span>
+            Prix par nuit : <br /><span class="color-5 price-size">201 €</span>
           </h3>
           <form aria-labelledby="Réserver">
             <div>
