--- a/pages/biens/6.html
+++ b/pages/biens/6.html
@@ -16,7 +16,7 @@
         >
       </h1>
       <h2 id="prix">
-        Prix par nuit: <br /><span class="neutral-color-4">80 €</span>
+        Prix par nuit : <br /><span class="color-5 price-size">80 €</span>
       </h2>
       <p>
         Découvrez ce charmant chalet aux Tignes, parfait pour une escapade
@@ -59,7 +59,7 @@
         <div id="achat" class="brick">
           <h2>Réserver ce bien</h2>
           <h3>
-            Prix par nuit: <br /><span class="neutral-color-4">80 €</span>
+            Prix par nuit : <br /><span class="color-5 price-size">80 €</span>
           </h3>
           <form aria-labelledby="Réserver">
             <div>
