--- a/pages/biens/8.html
+++ b/pages/biens/8.html
@@ -16,7 +16,7 @@
         >
       </h1>
       <h2 id="prix">
-        Prix par nuit: <br /><span class="neutral-color-4">68 €</span>
+        Prix par nuit : <br /><span class="color-5 price-size">68 €</span>
       </h2>
       <p>
         Découvrez cet appartement moderne et confortable à Khet Huai Khwang, en
@@ -58,7 +58,7 @@
         <div id="achat" class="brick">
           <h2>Réserver ce bien</h2>
           <h3>
-            Prix par nuit: <br /><span class="neutral-color-4">68 €</span>
+            Prix par nuit : <br /><span class="color-5 price-size">68 €</span>
           </h3>
           <form aria-labelledby="Réserver">
             <div>
