--- a/pages/biens/9.html
+++ b/pages/biens/9.html
@@ -16,7 +16,7 @@
         >
       </h1>
       <h2 id="prix">
-        Prix par nuit: <br /><span class="neutral-color-4">49 €</span>
+        Prix par nuit : <br /><span class="color-5 price-size">49 €</span>
       </h2>
       <p>
         Venez profiter d'un appartement spacieux au cœur de Pattaya centrale. Ce
@@ -60,7 +60,7 @@
         <div id="achat" class="brick">
           <h2>Réserver ce bien</h2>
           <h3>
-            Prix par nuit: <br /><span class="neutral-color-4">49 €</span>
+            Prix par nuit : <br /><span class="color-5 price-size">49 €</span>
           </h3>
           <form aria-labelledby="Réserver">
             <div>
